# satori-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  README.md  bucket.json  build.sh  release.toml  satori_auto_complete.zsh  test.sh
.github/workflows/: pre-release.yml  release.yml  rust.yml
auto_complete_functions/: script.zsh
bucket/: satori.json  satori_cli.json
configurations/: tools.yaml
scripts/: install_script.sh
src/: lib.rs  main.rs
src/cli/: auto_complete.rs  cli.rs  common.rs  connect.rs  data.rs  errors.rs  login.rs  mod.rs  parser.rs  tools.rs
src/connect/: data.rs  errors.rs  flow.rs  mod.rs
src/helpers/: default_app_folder.rs  mod.rs  tools.rs
src/list/: data.rs  errors.rs  flow.rs  mod.rs
src/login/: data.rs  errors.rs  flow.rs  mod.rs  web_server.rs
src/pwd/: data.rs  flow.rs  mod.rs
src/run/: data.rs  dbt.rs  dynamic_tools.rs  errors.rs  flow.rs  mod.rs
src/tools/: data.rs  errors.rs  flow.rs  mod.rs
tests/: test_aws.rs  test_dbt.rs  test_dynamic_tools.rs  test_login.rs  test_pgpass.rs
tests/aws_files/: expired_credentials  satori_config  stale_config_with_s3  stale_credentials_with_s3  unrelated_config  unrelated_credentials
tests/credentials_files/: basic_credentials.json  new_credentials.json  old_credentials.json
tests/datastores_files/: another_entry.json  athena_only_datastores.json  aws_datastores.json  mongo_datastores.json  postgres_datastores.json  psql_datastores.json  s3_datastores.json  single_entry.json
tests/dbt_files/: dbt_project.yml  profiles.yml  profiles_with_creds.yml
(+60 files in other folders)
