[package]
name = "satori-cli"
version = "0.0.15"
edition = "2021"
authors = ["Satori <devops@satoricyber.com>"]
description = "Allow Satori users to obation database crendtials without the need to login to the Satori data portal"
license = "Apache-2.0"
homepage = "https://www.github.com/SatoriCyber/satori-cli"
repository = "https://www.github.com/SatoriCyber/satori-cli"
documentation = "https://www.github.com/SatoriCyber/satori-cli/blob/main/README.md"

[[bin]]
name = "satori"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
base64 = "0.21.5"
chrono = {version="0.4.31", features = ["serde"]}
clap = {version = "4.4.11", features = ["cargo", "derive"]}
clap_complete = "4.4.4"
derive_builder = "0.12.0"
env_logger = "0.10.1"
homedir = "0.2.1"
log = "0.4.20"
minijinja = "1.0.10"
rand = "0.8.5"
regex = "1.10.2"
reqwest = {version ="0.11.23", features = ["json"]}
rust-ini = "0.20.0"
serde = {version="1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
thiserror = "1.0.51"
tokio = {version="1.35.0", features = ["full"]}
warp = "0.3.6"
webbrowser = "0.8.12"
[build-dependencies]
cargo-deb = "2.0.2"


[profile.release]
strip = true
